--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -11,9 +11,9 @@
     @apply block
 }
 
-::-webkit-scrollbar{
+/* ::-webkit-scrollbar{
     @apply hidden
-}
+} */
 
 @media(max-width:740p){
 .active p{
